fix overflow mac?

--- a/style.css
+++ b/style.css
@@ -7,12 +7,11 @@
 
 html {
   scroll-behavior: smooth;
-  overflow-x: clip;
 }
 
 body {
   color: #e2e2f8;
-  overflow-x: hidden;
+  overflow-x: clip;
   display: flex;
   flex-direction: column;
   background: #e6e6f3;
